Different files for algorithms

--- a/config.ini
+++ b/config.ini
@@ -8,4 +8,13 @@ log_only = True
 
 old_port = 1
 new_port = 3
-switches = 6,2
+switches = 00:00:00:00:00:06,00:00:00:00:00:02
+
+[SARIMA]
+best_p = 0
+best_d = 0
+best_q = 0
+best_P = 0
+best_D = 0
+best_Q = 0
+best_s = 12
