New name to avoid conflicts

--- a/config.ini
+++ b/config.ini
@@ -14,7 +14,7 @@ switches = 00:00:00:00:00:06,00:00:00:00:00:02
 best_p = 1
 best_d = 1
 best_q = 1
-best_P = 0
-best_D = 1
-best_Q = 1
-best_s = 12
+bestP = 0
+bestD = 1
+bestQ = 1
+bestS = 12
