--- a/config.ini
+++ b/config.ini
@@ -9,6 +9,7 @@ log_only = True
 old_port = 1
 new_port = 3
 switches = 00:00:00:00:00:06,00:00:00:00:00:02
+switches_monitored = 1, 2, 6, 7, 10
 
 [SARIMA]
 best_p = 1
