--- a/config.ini
+++ b/config.ini
@@ -8,8 +8,8 @@ log_only = True
 
 old_port = 1
 new_port = 3
-switches = 00:00:00:00:00:06,00:00:00:00:00:02
 switches_monitored = 1,2,6,7,10
+macs_interested = 72:9e:d8:59:8b:d0, d2:77:87:57:5d:69
 
 [SARIMA]
 best_p = 1
