--- a/config.ini
+++ b/config.ini
@@ -9,7 +9,7 @@ log_only = True
 old_port = 1
 new_port = 3
 switches_monitored = 2
-macs_interested = 72:9e:d8:59:8b:d0, d2:77:87:57:5d:69
+macs_interested = ba:a7:e7:40:7e:95, 42:ef:43:7c:76:0d, 5a:0d:09:aa:cd:f8
 
 [SARIMA]
 best_p = 1
