New macs to monitor

--- a/config.ini
+++ b/config.ini
@@ -9,7 +9,7 @@ log_only = True
 old_port = 1
 new_port = 3
 switches_monitored = 2
-macs_interested = ba:a7:e7:40:7e:95, 42:ef:43:7c:76:0d, 5a:0d:09:aa:cd:f8
+macs_interested = ba:a7:e7:40:7e:95, 42:ef:43:7c:76:0d, 8a:ae:bc:42:55:d8
 
 [SARIMA]
 best_p = 1
